--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,87 @@
+####################################
+# OS
+####################################
+.DS_Store
+Thumbs.db
+
+####################################
+# Python
+####################################
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+
+# Virtual environments
+.env
+.venv
+venv/
+ENV/
+env/
+
+# Python tooling
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.cache/
+coverage/
+htmlcov/
+*.log
+
+# Django / Flask / FastAPI extras
+db.sqlite3
+instance/
+*.sqlite3
+
+####################################
+# Node / React / Vite
+####################################
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Vite build output
+dist/
+dist-ssr/
+
+# Env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+####################################
+# Build tools / bundlers
+####################################
+.eslintcache
+.parcel-cache/
+.turbo/
+.vite/
+
+####################################
+# VS Code
+####################################
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/tasks.json
+
+####################################
+# IDEs
+####################################
+.idea/
+*.iml
+
+####################################
+# Misc
+####################################
+*.swp
+*.swo
+*.tmp
+*.bak
+
 .github-psa
