tests(fix): Install missing dependencies

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -7,9 +7,8 @@ addopts =
     --verbose
     --strict-markers
     --tb=short
-    --cov=apps
+    --cov=apps/customauth
     --cov=utils
-    --cov=management
     --cov-report=html
     --cov-report=term-missing
     --cov-fail-under=80
