chore: Add Pawapay sandbox base url

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -14,5 +14,5 @@ MANAGERS="Blake <blake@cyb.org>, Alice Judge <alice@cyb.org>"
 
 
 SERVER_EMAIL=webmaster@example.com
-PAWAPAY_BASE_URL=
+PAWAPAY_BASE_URL=https://api.sandbox.pawapay.io
 PAWAPAY_API_KEY=
