--- a/frontend/tip-zed-frontend/package.json
+++ b/frontend/tip-zed-frontend/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.2.0",
-    "axios": "^1.13.4",
+    "axios": "^1.13.5",
+    "axios-rate-limit": "^1.6.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
